Windows/CSharp Demo/AliRTCSdkCWrapper/Source/alirtc_sdk_c_wrapper.h

typedef enum _AliRTCVideoTrack {
    VIDEO_TRACK_NONE = 0,
    VIDEO_TRACK_CAMERA,
    VIDEO_TRACK_SCREEN,
    VIDEO_TRACK_BOTH,
}AliRTCVideoTrack;
typedef enum _AliRTCAudioTrack {
    AUDIO_TRACK_NONE = 0,
    AUDIO_TRACK_MIC,
}AliRTCAudioTrack;
typedef enum _AliRTClogLevel{
    LOG_LEVEL_DUMP = 0,
    LOG_LEVEL_DEBUG,
    LOG_LEVEL_VERBOSE,
    LOG_LEVEL_INFO,
    LOG_LEVEL_WARN,
    LOG_LEVEL_ERROR,
    LOG_LEVEL_FATAL,
    LOG_LEVEL_NONE,
}AliRTClogLevel;
/**
* @brief 用户离线原因
*/
typedef enum {
  AliRTCUserOfflineQuit = 0,              /* 用户主动离开 */
  AliRTCUserOfflineDropped = 1,           /* 因过长时间收不到对方数据包，超时掉线 */
  AliRTCUserOfflineBecomeAudience = 2,    /* 用户身份从主播切换为观众时触发 */
} AliRTCUserOfflineReason;
/**
* @brief 桌面分享类型
*/
typedef enum {
  AliRTCScreenShareDesktop,      /* 桌面分享 */
  AliRTCScreenShareWindow,       /* 窗口分享 */
} AliRTCScreenShareType;
//callback define
typedef void(ALIRTCSDK_CALL *ALIRTC_FUNC_OnJoinChannelNotify)(int result, const char *channel, int elapsed);
typedef void(ALIRTCSDK_CALL *ALIRTC_FUNC_OnRemoteUserOnLineNotify)(const char *uid, int elapsed, const char *channel);
typedef void(ALIRTCSDK_CALL *ALIRTC_FUNC_OnRemoteUserOffLineNotify)(const char *uid, AliRTCUserOfflineReason reason, const char *channel);
typedef void(ALIRTCSDK_CALL *ALIRTC_FUNC_OnRemoteTrackAvailableNotify)(const char* userId, int audioTrack, int videoTrack, const char *channel);
typedef void(ALIRTCSDK_CALL *ALIRTC_FUNC_OnByeNotify)(int code, const char *channel);
typedef void(ALIRTCSDK_CALL *ALIRTC_FUNC_OnOccurErrorNotify)(int error, const char *msg, const char *channel);
/********************************API***********************************/
ALIRTCSDK_API void  AliRtcCreateEngine(const char* extras);
ALIRTCSDK_API void  AliRtcDestroyEngine();
ALIRTCSDK_API int  AliRtcPublishLocalVideoStream(bool enabled, const char *channel);
ALIRTCSDK_API int  AliRtcPublishLocalAudioStream(bool enabled, const char *channel);
ALIRTCSDK_API int  AliRtcPublishLocalDualStream(bool enabled, const char *channel);
ALIRTCSDK_API int  AliRtcSubscribeAllRemoteAudioStreams(bool sub, const char *channel);
ALIRTCSDK_API int  AliRtcSubscribeRemoteAudioStream(const char* uid, bool sub, const char *channel);
ALIRTCSDK_API int  AliRtcSubscribeAllRemoteVideoStreams(bool sub, const char *channel);
ALIRTCSDK_API int  AliRtcSubscribeRemoteVideoStream(const char* uid, AliRTCVideoTrack track, bool sub, const char *channel);
ALIRTCSDK_API int  AliRtcJoinChannel(const char* channel, const char* userId, const char* appId,
  const char* nonce, const char* token, const char* role, const char* gslbArray,
  const char* agentArray, long long timestamp, const char* userName);
ALIRTCSDK_API int  AliRtcStartPreview();
ALIRTCSDK_API int  AliRtcMuteLocalCamera(bool mute, int track, const char *channel);
ALIRTCSDK_API void  AliRtcSetLogLevel(AliRTClogLevel logLevel);
ALIRTCSDK_API void  AliRtcSetH5CompatibleMode(bool comp);
ALIRTCSDK_API int  AliRtcSetLocalViewConfig(void *displayView, int backgroundColor, int renderMode, int mirrorMode, int scaleMode, int rotation, long long renderId, int width, int height, bool enableGL, AliRTCVideoTrack track);
ALIRTCSDK_API int  AliRtcSetRemoteViewConfig(void *displayView, int backgroundColor, int renderMode, int mirrorMode, int scaleMode, int rotation, long long renderId, int width, int height, bool enableGL, const char* userId, AliRTCVideoTrack track, const char *channel);
ALIRTCSDK_API int  AliRtcStartScreenShareByDesktopId(unsigned int desktopId, bool isShareByRegion, float originX, float originY, float width, float height, const char *channel);
ALIRTCSDK_API int  AliRtcStopScreenShare(const char *channel);
ALIRTCSDK_API const char*  AliRtcGetScreenShareSourceInfo(AliRTCScreenShareType sourceType, const char *channel);
ALIRTCSDK_API bool  AliRtcIsScreenSharePublished(const char *channel);
/******************************CallBack********************************/
ALIRTCSDK_API void  AliRtcSetEventOnJoinChannelNotify(ALIRTC_FUNC_OnJoinChannelNotify onJoinChannelNotify);
ALIRTCSDK_API void  AliRtcSetEventOnRemoteUserOnLineNotify(ALIRTC_FUNC_OnRemoteUserOnLineNotify onRemoteUserOnLineNotify);
ALIRTCSDK_API void  AliRtcSetEventOnRemoteUserOffLineNotify(ALIRTC_FUNC_OnRemoteUserOffLineNotify onRemoteUserOffLineNotify);
ALIRTCSDK_API void  AliRtcSetEventOnRemoteTrackAvailableNotify(ALIRTC_FUNC_OnRemoteTrackAvailableNotify onRemoteTrackAvailableNotify);
ALIRTCSDK_API void  AliRtcSetEventOnByeNotify(ALIRTC_FUNC_OnByeNotify onByeNotify);
ALIRTCSDK_API void  AliRtcSetEventOnOccurErrorNotify(ALIRTC_FUNC_OnOccurErrorNotify onOccurErrorNotify);